src/test/fail/lambda_bad_token.lly
#[
SyntaxError: Unexpected token '}'.
Where: File "test/fail/lambda_bad_token.lly" at line 6
]#

var v = {|| }
